arguments.yml
apiVersion: v1
kind: Pod
metadata: 
  name: webapp-green
  labels:  
    name: webapp-green
spec:
  containers: 
    - name: simple-webapp
      image: kodekloud/webapp-color
      args: ["--color=green"]
